--- a/src/views/index.html
+++ b/src/views/index.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="home-content-right">
-                    <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
+                    <img src="/images/illustrations/home-illustration.svg" alt="minimalistic work illustration" />
                 </div>
             </article>
         </section>
@@ -167,7 +167,7 @@
                             <div class="dropdown-items hide-dropdown">
                                 <span>That's great</span>
                                 <span>That's amazing</span>
-                                <span>That's shit</span>
+                                <span>That's good</span>
                                 <span>That's free</span>
                             </div>
                         </div>
@@ -182,7 +182,7 @@
                             <div class="dropdown-items hide-dropdown">
                                 <span>That's great</span>
                                 <span>That's amazing</span>
-                                <span>That's shit</span>
+                                <span>That's good</span>
                                 <span>That's free</span>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                             <div class="dropdown-items hide-dropdown">
                                 <span>That's great</span>
                                 <span>That's amazing</span>
-                                <span>That's shit</span>
+                                <span>That's good</span>
                                 <span>That's free</span>
                             </div>
                         </div>
@@ -206,10 +206,10 @@
                 <article class="contact-form">
                     <h2>Get in touch</h2>
                     <h3>Send us your question</h3>
-                    <form action="">
-                        <input type="text" name="name" autocomplete="off" placeholder="Your name">
-                        <input type="email" name="email" autocomplete="off" placeholder="Your email">
-                        <textarea name="message" rows="2" autocomplete="off" autocapitalize="true"
+                    <form action="/question" method="POST">
+                        <input value="victor" type="text" name="name" autocomplete="off" placeholder="Your name">
+                        <input value="vituwot@gmail.com" type="email" name="email" autocomplete="off" placeholder="Your email">
+                        <textarea name="message" rows="3" autocomplete="off" autocapitalize="true"
                             placeholder="What's your question?"></textarea>
                             <button type="submit">Submit</button>
                     </form>
@@ -237,8 +237,8 @@
     </footer>
     <div id="effect" class="hide-effect"></div>
 
-    <script src="/javascripts/menu.js"></script>
-    <script src="/javascripts/dropdown.js"></script>
+    <script src="/javascripts/index/menu.js"></script>
+    <script src="/javascripts/index/dropdown.js"></script>
 </body>
 
 </html>
